# dotfiles

./: MACHINES.md  README.md  common.nix  configuration.nix  distrobox-epitech.md  distrobox-epitech.sh  epitech.sh  flake.nix  hardware-configuration.nix  install.sh  link.sh  p10k.graphical.zsh  p10k.tty.zsh  vimrc  zshrc
alacritty/: alacritty.toml
config/quickshell/reyshell/: .clang-format  CMakeLists.txt
config/quickshell/reyshell/components/containers/: StyledWindow.qml
config/quickshell/reyshell/components/controls/: CircularIndicator.qml  StyledRadioButton.qml
config/quickshell/reyshell/components/effects/: ColouredIcon.qml
config/quickshell/reyshell/components/filedialog/: FolderContents.qml
config/quickshell/reyshell/components/images/: CachingImage.qml
config/quickshell/reyshell/components/misc/: CustomShortcut.qml
config/quickshell/reyshell/components/widgets/: ExtraIndicator.qml
config/quickshell/reyshell/config/: AppearanceConfig.qml  BarConfig.qml  Config.qml  GeneralConfig.qml  LauncherConfig.qml  ServiceConfig.qml  SessionConfig.qml  SidebarConfig.qml  UtilitiesConfig.qml
config/quickshell/reyshell/modules/: BatteryMonitor.qml  IdleMonitors.qml  Shortcuts.qml
config/quickshell/reyshell/modules/areapicker/: Picker.qml
config/quickshell/reyshell/modules/background/: Visualiser.qml
config/quickshell/reyshell/plugin/: CMakeLists.txt
config/quickshell/reyshell/services/: Audio.qml  Colours.qml  GameMode.qml  Hypr.qml  Notifs.qml  Recorder.qml  Wallpapers.qml  Weather.qml
config/quickshell/reyshell/utils/: Icons.qml  Paths.qml
(+10306 files in other folders)
